--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,13 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "郑雨萱个人注意照片.jpg"
-  name             : "Your Sidebar Name"
+  avatar           : "yuxuan.png"
+  name             : "Yuxuan Zheng"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
   employer         : "Red Brick University"
-  uri              : # URL
+  uri              : # qiuhaoliu.github.io/qiuhao.github.io
   email            : "none@example.org" 
 
   # Academic websites
