--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
   employer         : "Red Brick University"
-  uri              : # qiuhaoliu.github.io/qiuhao.github.io
+  uri              : # https://qiuhaoliu.github.io/qiuhao.github.io/
   email            : "none@example.org" 
 
   # Academic websites
