--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ repository               : "academicpages/academicpages.github.io"
 author:
   name             : "Yuxuan Zheng"
   avatar           : "郑雨萱个人主页照片.jpg"
-  bio              : "Lorem ipsum College"
-  location         : "Beijing, China"
+  bio              : "我爱小狗"
+  location         : "HongKong, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
