--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 # Site Author
 author:
   name             : "Yuxuan Zheng"
-  avatar           : "yuxuan.png"
+  avatar           : "images/yuxuan.png"
   bio              : "我爱小狗"
   location         : "HongKong, China"
   employer         :
